[package]
name = "event-proofs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
alloy = { version = "0.12.5", features = ["full"] }
alloy-primitives = { version = "0.8.25", default-features = false }
alloy-trie = { version = "0.7.9", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-sol-types = "1.3"

serde_json = "1"

tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }
url = { version = "2.5", default-features = false }
